<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar_a_settings" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_l_gray_with_small_corners"
                android:orientation="vertical"
                android:padding="10dp">

                <Button
                    android:id="@+id/a_settings_barcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_settings_scan_qr" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_l_gray_with_small_corners"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_settings_server_address"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/a_settings_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/border_l_gray_with_small_corners"
                    android:digits="0123456789."
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="14sp"
                    tools:ignore="LabelFor,TextFields" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_settings_server_port"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/a_settings_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/border_l_gray_with_small_corners"
                    android:digits="0123456789"
                    android:inputType="numberDecimal"
                    android:padding="5dp"
                    android:textSize="14sp"
                    tools:ignore="LabelFor,TextFields" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_settings_server_tts"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/a_settings_tts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/border_l_gray_with_small_corners"
                    android:digits="0123456789"
                    android:inputType="numberDecimal"
                    android:padding="5dp"
                    android:textSize="14sp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_settings_server_id"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/a_settings_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/border_l_gray_with_small_corners"
                    android:padding="5dp"
                    android:textSize="14sp"
                    tools:ignore="LabelFor,TextFields" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_settings_server_prefix"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/a_settings_prefix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/border_l_gray_with_small_corners"
                    android:padding="5dp"
                    android:textSize="14sp"
                    tools:ignore="LabelFor,TextFields" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_settings_server_key"
                    android:textSize="12sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/light_gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/a_settings_key"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/border_l_gray_with_small_corners"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/a_settings_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_settings_save" />

            </LinearLayout>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>