<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar_a_main" />

    <LinearLayout
        android:id="@+id/a_main_controls_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_main_server_id"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/a_main_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/border_l_gray_with_small_corners"
                android:padding="5dp"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/a_main_connect_disconnect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_connect_to" />

            <TextView
                android:id="@+id/a_main_last_device"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ellipsize="end" />

            <Button
                android:id="@+id/a_main_choose_device"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_choose_device" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/a_main_debug_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_main_debug" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/a_main_controls_container"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:padding="@dimen/space_5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_main_controls_container">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/a_main_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="gone" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>